Bug 69691 - [HSW Desktop VGA bisected]WARNING:pipe state mismatch:mismatch in pipe_bpp (expected 24, found 0)
Summary: [HSW Desktop VGA bisected]WARNING:pipe state mismatch:mismatch in pipe_bpp (e...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-23 06:23 UTC by cancan,feng
Modified: 2017-10-06 14:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
boot with VGA dmesg (167.02 KB, text/plain)
2013-09-23 06:25 UTC, cancan,feng
no flags Details
LPT CRT pipe_bpp readout (1.06 KB, patch)
2013-09-23 08:24 UTC, Ville Syrjala
no flags Details | Splinter Review
Better patch (3.71 KB, patch)
2013-09-23 09:34 UTC, Ville Syrjala
no flags Details | Splinter Review
Even better patch (3.69 KB, patch)
2013-09-23 18:23 UTC, Ville Syrjala
no flags Details | Splinter Review

Description cancan,feng 2013-09-23 06:23:49 UTC
System Environment:
--------------------------------------------
Kernel: (drm-intel-next-queued)42571aefafb1d330ef84eb29418832f72e7dfb4c
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Fri Sep 6 23:29:00 2013 +0300

    drm/i915: Add support for pipe_bpp readout

Bug detailed description:
--------------------------------------------
System booting up with VGA will result in "*ERROR* mismatch in pipe_bpp (expected 24, found 0)", this is a regression, I have bisected it. I will attach the whole dmesg of 42571a, in which you can find the details of Call Trace.

Bisect result:
--------------------------------------------
42571aefafb1d330ef84eb29418832f72e7dfb4c is the first bad commit
commit 42571aefafb1d330ef84eb29418832f72e7dfb4c
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Fri Sep 6 23:29:00 2013 +0300

    drm/i915: Add support for pipe_bpp readout

Reproduce steps:
--------------------------------------------
1. plug in VGA
2. boot machine
Comment 1 cancan,feng 2013-09-23 06:25:41 UTC
Created attachment 86332 [details]
boot with VGA dmesg
Comment 2 Jani Nikula 2013-09-23 07:26:43 UTC
Ville, VGA bpp read out on HSW.
Comment 3 Ville Syrjala 2013-09-23 08:24:30 UTC
Created attachment 86343 [details] [review]
LPT CRT pipe_bpp readout

Please test with this patch.
Comment 4 Ville Syrjala 2013-09-23 09:34:29 UTC
Created attachment 86350 [details] [review]
Better patch

Daniel pointed out that my first patch sucked, so I made a better one. Please test this one instead.
Comment 5 Ville Syrjala 2013-09-23 18:23:20 UTC
Created attachment 86403 [details] [review]
Even better patch

I just got confirmation on how CRT sync polarity works on HSW and revised the patch accordingly.

Third time's the charm hopefully.
Comment 6 Qingshuai Tian 2013-09-24 06:01:58 UTC
(In reply to comment #5)
> Created attachment 86403 [details] [review] [review]
Even better patch

I just got
> confirmation on how CRT sync polarity works on HSW and revised the patch
> accordingly.

Third time's the charm hopefully.



Applying this patch on latest -next-queued kernel, this "ERROR" disappeared. and if you landed the patch on Daniel's tree, we can close this bug.
Comment 7 Daniel Vetter 2013-09-24 14:06:59 UTC
Fix merged to dinq:

commit bffc0fd4ac5f385e045985018c433770e23c3d91
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Sep 24 14:24:05 2013 +0300

    drm/i915: Add HSW CRT output readout support
Comment 8 Qingshuai Tian 2013-09-25 02:41:29 UTC
(In reply to comment #7)
> Fix merged to dinq:

commit bffc0fd4ac5f385e045985018c433770e23c3d91
Author:
> Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Sep 24 14:24:05
> 2013 +0300

    drm/i915: Add HSW CRT output readout support

OK, I tried this commit is good. Verified here.
Comment 9 Elizabeth 2017-10-06 14:42:58 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.